--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "indexUnity.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "indexUnity.js"
+    "start": "node indexUnity.js"
   },
   "author": "Andrei-Dorian Diaconescu",
   "license": "ISC",
